--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
 <body>
 
     <nav class="navbar">
-        <h1>Whitman Auto Center539 Washington St, Whitman, MA 02382</h1>
+        <h1>Whitman Auto Center
+            539 Washington St, Whitman, MA 02382</h1>
     </nav>
 
     <header class="hero-banner">
