--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         /* Button Style in Banner */
         .hero-banner .cta-button {
             display: inline-block;
-            background-color: #d32f2f;
+            background-color: #28a745;
             color: white;
             padding: 15px 40px;
             text-decoration: none;
