--- a/index.html
+++ b/index.html
@@ -247,6 +247,24 @@
         allowfullscreen>
     </iframe>
 </div>
+        <section style="background-color: #f1f1f1; padding: 40px 20px; text-align: center;">
+    <h2 style="margin-bottom: 30px;">What Our Neighbors Say</h2>
+    <div style="max-width: 800px; margin: 0 auto; text-align: left;">
+        
+        <div style="background: white; padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <p style="font-style: italic; color: #555;">"Saved me hundreds compared to the dealership. They got my brakes done in 2 hours and showed me the old parts. Honest guys."</p>
+            <p style="margin-top: 10px; font-weight: bold; color: #333;">- Sarah M., Whitman</p>
+            <span style="color: #ffc107;">★★★★★</span>
+        </div>
+
+        <div style="background: white; padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <p style="font-style: italic; color: #555;">"Excellent service. I heard a grinding noise and they diagnosed it for free. No pressure upsells."</p>
+            <p style="margin-top: 10px; font-weight: bold; color: #333;">- Mike T., Brockton</p>
+            <span style="color: #ffc107;">★★★★★</span>
+        </div>
+
+    </div>
+</section>
 
         <div class="service-areas">
             <p>Serving Whitman, Brockton, West Bridgewater, Abington, Rockland, Hanson, Bridgewater, Weymouth, Norwell, East Bridgewater, Pembroke, and beyond.</p>
