--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@
     <div style="max-width: 800px; margin: 0 auto; text-align: left;">
         
         <div style="background: white; padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <p style="font-style: italic; color: #555;">"These guys went above and beyond for me when a tow truck company filled my tank with water instead of gasoline. Not only did they get it fixed, they were able to save my engine..."</p>
-            <p style="margin-top: 10px; font-weight: bold; color: #333;">- J M.W., Whitman</p>
+            <p style="font-style: italic; color: #555;">"I will continue to bring my car along with my wife’s and boys cars to be serviced here."</p>
+            <p style="margin-top: 10px; font-weight: bold; color: #333;">- Stephen Lovell, Whitman</p>
             <span style="color: #ffc107;">★★★★★</span>
         </div>
 
         <div style="background: white; padding: 20px; border-radius: 8px; margin-bottom: 20px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
             <p style="font-style: italic; color: #555;">"The service was fantastic! I got my brakes replaced, window fixed, and an inspection! Very pleased!! Will definitely be coming back!"</p>
-            <p style="margin-top: 10px; font-weight: bold; color: #333;">- Colby Johnson., Brockton</p>
+            <p style="margin-top: 10px; font-weight: bold; color: #333;">- Colby Johnson., Abington</p>
             <span style="color: #ffc107;">★★★★★</span>
         </div>
 
