--- a/index.html
+++ b/index.html
@@ -265,6 +265,11 @@
 
     </div>
 </section>
+        <div style="background-color: #333; color: white; padding: 15px; text-align: center; display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
+    <span>🏆 20+ Years Experience</span>
+    <span>🛡️ Locally Owned</span>
+    <span>⭐ 4.8 Star Google Rating</span>
+</div>
 
         <div class="service-areas">
             <p>Serving Whitman, Brockton, West Bridgewater, Abington, Rockland, Hanson, Bridgewater, Weymouth, Norwell, East Bridgewater, Pembroke, and beyond.</p>
