--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ function gtag_report_conversion(url) {
             </ul>
             <br>
         <div style="margin-top: 20px;">
-            <a href="tel:7814470400" class="cta-button">Call Now 781-447-0400</a>
+            <a href="tel:7814470400" onclick="return gtag_report_conversion('tel:7814470400');" class="cta-button">Call Now For Service: 781-447-0400</a>
         </div>
         </section>
         <div class="map-container">
@@ -342,7 +342,7 @@ function gtag_report_conversion(url) {
         </div>
         <br>
         <div style="margin-top: 20px;">
-            <a href="tel:7814470400" class="cta-button">Call Whitman Auto Center Now 781-447-0400</a>
+            <a href="tel:7814470400" onclick="return gtag_report_conversion('tel:7814470400');" class="cta-button">Call Now For Service: 781-447-0400</a>
         </div>
 
     </div>
@@ -356,7 +356,7 @@ function gtag_report_conversion(url) {
     <footer>
         <p>&copy; 2024 Whitman Auto Center</p>
     </footer>
-<a href="tel:7814470400" class="sticky-footer">
+<a href="tel:7814470400" onclick="return gtag_report_conversion('tel:7814470400');" class="sticky-footer">
     📞 Call Now: 781-447-0400
 </a>
 </body>
